--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
   <!-- NAVBAR -->
-  <header></header>
+  <header>
+    <div class="container-fluit">
+      <div class="row">
+
+      </div>
+    </div>
+  </header>
   <!-- HERO -->
   <section class="hero"></section>
   <!-- INFORMACIÓN -->
