--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+
 </head>
 <body>
   <!-- NAVBAR -->
   <header>
     <div class="container-fluit">
       <div class="row">
-
+        <div class="col-xs-3 text-center"></div>
+        <div class="col-xs-9 text-center"></div>
       </div>
     </div>
   </header>
