agragando link bootstrap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>LabCar</title>
+  <link rel="stylesheet" href="assets/img/main.css">
+  <link rel="stylesheet" href="assets/img/bootstrap.css">
+  <link rel="stylesheet" href="assets/img/bootstrap.min.css">
 </head>
 <body>
   <!-- NAVBAR -->
@@ -19,5 +22,7 @@
   <setion class="tarifa"></setion>
   <!-- FOOTER -->
   <footer></footer>
+  <script src="assets/js/app.js" charset="utf-8"></script>
+  <script src="assets/js/bootstrap.min.js" charset="utf-8"></script>
 </body>
 </html>
