--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <title>LabCar</title>
+  <link rel="stylesheet" href="assets/img/main.css">
+  <link rel="stylesheet" href="assets/img/bootstrap.css">
+  <link rel="stylesheet" href="assets/img/bootstrap.min.css">
 </head>
 <body>
   <!-- NAVBAR -->
   <header>
     <div class="container-fluit">
       <div class="row">
-        <div class="col-xs-3 text-center"></div>
-        <div class="col-xs-9 text-center"></div>
+        <div class="col-xs-3 text-center push-1"></div>
+        <div class="col-xs-9 text-center pull-1"></div>
       </div>
     </div>
   </header>
@@ -26,5 +29,7 @@
   <setion class="tarifa"></setion>
   <!-- FOOTER -->
   <footer></footer>
+  <script src="assets/js/app.js" charset="utf-8"></script>
+  <script src="assets/js/bootstrap.min.js" charset="utf-8"></script>
 </body>
 </html>
